# elf

./: README.md
ElfAndroid/: build.gradle  gradle.properties  settings.gradle
ElfAndroid/app/: build.gradle
c++/: CMakeLists.txt  main.cpp
c++/app/: ApplicationInterface.cpp  ApplicationInterface.h
c++/config/: Config.h
c++/control/: ControlManager.cpp  ControlManager.h
c++/dataset/: VideoLoader.cpp  VideoLoader.h
c++/network/: Socket.cpp  Socket.h
c++/partitioning/: PartitionManager.cpp  PartitionManager.h  PartitionSimulator.cpp  PartitionSimulator.h
c++/prediction/: PredictionManager.cpp  PredictionManager.h
c++/prediction/models/: predict.pt
c++/run/: Client.cpp  Client.h  Elf.cpp  Elf.h
c++/test/: test.h  test_array.cpp  test_elf.cpp  test_img_transfer.cpp  test_multi_sockets.cpp  test_network.cpp  test_parallel_offload.cpp  test_predictiion.cpp  test_wait_notify.cpp
c++/utils/: utils.cpp  utils.h
python/: README.md  requirements.txt
python/bbox/: __init__.py  bounding_box.py
python/client_model/: __init__.py  client_model_detectron2.py  client_model_interface.py  client_model_mmdetect.py  client_model_test.py
python/config/: __init__.py  config.py  configs.py
python/control/: __init__.py  control_mgr.py
python/dataset/: __init__.py  box_loader.py  video_loader.py
python/demo/: elf_client.py  elf_server.py  vis_par.py
python/flow/: __init__.py  flow_control.py  flow_data.py  lrc.py  offload.py  offload_schedule.py
python/htmlcov/: d_1ea838694151cac8___init___py.html  d_1ea838694151cac8_config_py.html  d_52bacfe154c74bef___init___py.html  (+53 more)
(+7912 files in other folders)
